--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <p>However ... By all means do not click the big red nice clickable button below! It will boot AI capable of rapid self improvement and achieving super human intellect, as well as allow this AI access to the Internet, and you know what that will lead to!</p>
     <div class="imgcap">
         <img src="/images/DoomsdayButton.png" width="70%" style="border:none;">
-        <div class="thecap" style="text-align:justify"></div>
+        <div class="thecap" style="text-align:justify"> AI start button </div>
     </div>
 </div>
 </article>
