--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <p>Here I share my ideas and experiences on the quest to understand how intelligence work, as well as some Python code to support my findings. Feel free to click around!</p>
     <p>However ... By all means do not click the big red nice clickable button below! It will boot AI capable of rapid self improvement and achieving super human intellect, as well as allow this AI access to the Internet, and you know what that will lead to!</p>
     <div class="imgcap">
-        <img src="/images/DoomsdayButton.png" width="70%" style="border:none;" align="middle">
+        <img src="/images/DoomsdayButton.png" width="70%" style="align:center;" align="middle">
     </div>
     
     
