--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="pure-g">
   <div class="pure-u-1"><div class="imgcap" style="text-align: center">
-      <img src="./index_files/iaroslav.jpg" width="25%" title="A picture with my face">
+      <img src="./images/iaroslav.jpg" width="25%" title="A picture with my face">
   </div></div>
   <div class="container" style="text-align: center">
     <a href="https://github.com/iaroslav-ai"><i class="svg-icon github"></i></a>
