Style updates and construction zone img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ layout: default
           But please do not click on the big red nice clickable button below! It will boot the AI program capable of a rapid self improvement, and you know what that will lead to!
       </p>
       <div class="imgcap" style="text-align: center">
-          <img src="./images/doomsday.svg" width="20%" title="Don't you think about clicking me ;)">
+          <a href="{{ site.baseurl }}/ai_boot">
+              <img src="./images/doomsday.svg" width="20%" title="Don't you think about clicking me ;)">
+          </a>
       </div>
   </div>
 </div>
