Update layout of main, ai boot post update, 404 update

--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@ layout: default
   <div class="pure-u-1"><div class="imgcap" style="text-align: center">
       <img src="./images/iaroslav.jpg" width="25%" title="A picture with my face">
   </div></div>
-  <div class="container" style="text-align: center">
-    <a href="https://github.com/iaroslav-ai"><i class="svg-icon github"></i></a>
-    <a href="https://www.linkedin.com/in/iaroslavshcherbatyi"><i class="svg-icon linkedin"></i></a>
-  </div>
   <div class="pure-u-1">
       <p>
           <a href="https://en.wikipedia.org/wiki/Howdy">Howdy!</a> I'm Iaroslav Shcherbatyi. My interests are in theory and practice of AI and Mathematical Optimization.
           I invite you to explore any of the links above for more information about me.
       </p>
       <p>
-          But please do not click on the big red nice clickable button below! It will boot the AI program capable of a rapid self improvement, and you know what that will lead to!
+          Warning: do not click on the big red nice clickable button below! It will boot the AI program capable of a rapid self improvement, and you know what that will lead to!
       </p>
       <div class="imgcap" style="text-align: center">
           <a href="{{ site.baseurl }}/ai_boot">
