--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@ layout: default
         <div class="pure-g">
             <div class="pure-u-4-5">
                 <p style="background-color:rgb(70, 0, 29); color:rgb(255, 255, 255); padding:10px; text-align:left; margin-left: 25px">  
-                        <span style="color:rgb(0, 212, 212)">usr</span><span style="color:rgb(163, 0, 0)">@</span><span style="color:rgb(0, 209, 17)">ai.com</span><span style="color:rgb(163, 0, 0)">:~$</span>
+                        <span style="color:rgb(0, 212, 212)">root</span><span style="color:rgb(163, 0, 0)">@</span><span style="color:rgb(0, 209, 17)">blade01</span><span style="color:rgb(163, 0, 0)">:~$</span>
                         python GAI.py<span id="cursor"></span>
                 </p>
             </div>
             <div class="pure-u-1-5">
-                    <p style="background-color:rgb(199, 199, 199); padding:10px; margin-right:25px;" align="center">
-                        <a href="/ai_boot" style="color:black">Run!</a>
+                <a href="/ai_boot" style="color:black">
+                    <p style="background-color:rgb(199, 199, 199); padding:10px; margin-right:25px; text-align:center;">
+                        Run!
                     </p>
+                </a>
             </div>
         </div>
       </div>
@@ -60,6 +62,6 @@ http://www.pythonchallenge.com/
 Also feel free to reverse engineer my website
 if this is your intent. 
 
-Want to say привет (hi) or something else? 
-Write to iaroslav.github@gmail.com
+Want to say привет (hi) or something else? Dont
+hesitate to write to iaroslav.github@gmail.com !
 -->
