--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@ layout: default
   </div></div>
   <div class="pure-u-1">
       <p>
-          <a href="https://en.wikipedia.org/wiki/Howdy">Howdy!</a> I'm Iaroslav Shcherbatyi. My interests are in theory and practice of AI and Mathematical Optimization.
+          Hi! I'm Iaroslav Shcherbatyi. My interests are in theory and practice of AI and Mathematical Optimization.
           I invite you to explore any of the links above for more information about me.
       </p>
-      <p>
-          Warning: do not run a python script below using the "run" button! It will boot the AI program capable of a rapid self improvement, and you know what that will lead to!
-      </p>
+	
     <div class="imgcap" style="text-align: center">
         <div class="pure-g">
             <div class="pure-u-4-5">
