Call it web stethoscope

--- a/demos.html
+++ b/demos.html
@@ -24,7 +24,7 @@ layout: default
   <div class="pure-u-1">
 
     <article >
-      <h1><a href="/demos/web_stethoscope/index.html">Heart sound classifier</a></h1>
+      <h1><a href="/demos/web_stethoscope/index.html">Web stethoscope</a></h1>
       <img src="/demos/web_stethoscope/icon.png">
       <br>
 
