Add warning to blogs, clear the GAN part to make it less edgy

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ layout: default
     <!-- 
     Hello there, curious stranger of the internet!
     Welcome to the invisible part of my website!
+    Feel free to reverse engineer my website if this 
+    is your intent. 
+
+    Want to say привет (hi) or something else? Dont
+    hesitate to write to iaroslav.github@gmail.com !
+
     If you like to search for hidden stuff, like
     solving riddles and want to master more Python
     (and have a bit of free time unlike some people)
@@ -22,12 +28,14 @@ layout: default
 
     http://www.pythonchallenge.com/
 
-    Also feel free to reverse engineer my website
-    if this is your intent. 
+    Similarly, you can try doing coding challenges,
+    here for example:
 
-    Want to say привет (hi) or something else? Dont
-    hesitate to write to iaroslav.github@gmail.com !
-    -->
+    https://app.codility.com/programmers/
+
+    I have been recently hooked on those; apparently
+    coding challenges can be addictive :D
+    
 	
     <div class="imgcap" style="text-align: center">
         <div class="pure-g">
@@ -46,12 +54,14 @@ layout: default
             </div>
         </div>
       </div>
+     -->
+
   </div>
 </div>
 
 <script>
     // This animates the cursor of GAI command
-    var state = false
+    /*var state = false
 
     function animateCursor() {
         var pointer = ''
@@ -61,7 +71,7 @@ layout: default
     }
     
     animateCursor()
-    setInterval(animateCursor, 1000); 
+    setInterval(animateCursor, 1000); */
 </script>
 
 
